@@ -115,8 +115,8 @@ class WHHttpServer : public QObject
   QSignalMapper *http_cgi_finished_mapper;
   std::vector<WHHttpConnection *> http_connections;
   QTimer *http_garbage_timer;
-  //  int http_istate;
   std::map<QString,std::vector<WHHttpUser *> > http_users;
+  bool http_dump_transactions;
 };
 
 
