@@ -262,3 +262,9 @@
 	* Added support for connection close status codes in
 	'src/wh/whhttpserver.cpp', 'src/wh/whhttpserver.h',
 	'src/wh/whhttpconnection.cpp' and 'src/wh/whhttpconnection.h'.
+2016-02-29 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'docs/DEBUGGING.txt'.
+2016-02-29 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed bugs in 'src/wh/whhttpserver.cpp' and
+	'src/wh/whhttpconnection.cpp' that broke WebSocket support on
+	Safari, Internet Explorer and Edge browsers.
